--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -159,6 +159,9 @@ ClearAll        = Clear all
 MultiSensor     = MultiSensor
 IndicatorTrack  = Indicator Track
 IndicatorTO     = Indicator Turnout
+setBackground   = Preview Background:
+Checkers        = Checkers
+PanelBgColor    = Panel Color
 
 #used in dualdecoder, PrintRoster
 IDnumber        = ID number {0}
