--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -345,13 +345,15 @@ SetGridSizesMessageTitle = Grid Sizes
 
 EnterTitle = Enter New Title
 EditTitleMessageTitle = Edit Layout Name
+SetTrackDrawingOptions = Set Track Drawing Options
+SetTrackDrawingOptionsToolTip = Select this item to change your track drawing options
 SetTrackWidth = Set Track Line Width
 SetLocation = Save Location and Size
 TrackColorSubMenu = Default Track Colors
 DefaultTrackColor = Set Default Track Color
 DefaultOccupiedTrackColor = Set Default Occupied Track Color
 DefaultAlternativeTrackColor = Set Default Alternative Track Color
-#DefaultTextColor = Set Default Text Color
+#DefaultTextColor Moved to DisplayBundle.properties
 TurnoutOptions = Turnout Options
 TurnoutCircleColor = Set Turnout Circle Color
 TurnoutCircleSize = Set Turnout Circle Size
