working set bg colors, not checkered

--- a/java/src/jmri/jmrit/display/palette/PaletteBundle.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle.properties
@@ -28,7 +28,7 @@ fromArrow           = Entry Arrow
 OccupancySensor     = Occupancy Circuit
 ErrorSensor         = Error Sensor   
 
-IconSetName         = Icon Set Name:
+IconSetName         = Icon Set Name: {0}
 #IconName            = Icon Name:
 #editText            = Edit Text
 LinkName            = Panel or URL Name
