fix Bundle inheritance, including moving some keys to a higher level in the tree.

--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -300,3 +300,7 @@ Automatic               = Auto
 rsType                  = Locomotive
 FunctionMomentary       = Momentary
 FunctionContinuous      = Continuous
+
+# Keys used in both jmri.jmrix and jmri.jmrit
+SendPacketTitle         = Send Packet
+
