--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -61,6 +61,7 @@ MenuItemSetupClock = Setup Fast Clock...
 MenuItemAnalogClock = Analog Clock
 ButtonRunClock = Run
 ButtonPauseClock = Pause
+ButtonGo = Go
 
 MenuItemAmpMeter = Track Current...
 
