--- a/pom.xml
+++ b/pom.xml
@@ -563,6 +563,16 @@
                                         </limit>
                                     </limits>
                                 </rule>
+                                <rule>
+                                    <element>SOURCEFILE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>METHOD</counter>
+                                            <value>COVEREDCOUNT</value>
+                                            <minimum>1</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
                             </rules>
                         </configuration>
                     </execution>
