Removed 0x prefix to hex numbers; switch from "" + obj to obj.toString()
Renamed UsbDeviceBCDDevice to "Release Number"

--- a/java/src/jmri/util/usb/Bundle.properties
+++ b/java/src/jmri/util/usb/Bundle.properties
@@ -23,7 +23,7 @@ UsbDeviceSubClass = SubClass
 #USB Protocol for device
 UsbDeviceProtocol = Protocol
 #USB BCD device number for device
-UsbDeviceBCDDevice = Version Number
+UsbDeviceBCDDevice = Release Number
 #USB Location for device
 UsbDeviceLocationId = Location ID
 #Table text when there is no selection
