--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -636,3 +636,10 @@ CheckUnBlockedTracksMenuTitle = Un-Blocked Tracks
 CheckUnBlockedTracksMenuToolTip = Select this to check for tracks that do not have an assigned block
 CheckNonContiguousBlocksMenuTitle = Non-Contiguous Blocks
 CheckNonContiguousBlocksMenuToolTip = Select this to check for blocks that are not contiguous
+
+#LayoutTrackDrawingOptionsDialog properties
+ClassicPresetName = Classic JMRI
+DraftingPresetName = Drafting
+RealisticPresetName = Realistic
+GarishPresetName = Garish
+CustomPresetName = Custom
