Moved all the strings into the LayoutEditorBundle.properties file
Changed the code to use Bundle.getMessage("XXX");
Changed all the color buttons to use ActionListeners instead of MouseListeners.

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -638,8 +638,68 @@ CheckNonContiguousBlocksMenuTitle = Non-Contiguous Blocks
 CheckNonContiguousBlocksMenuToolTip = Select this to check for blocks that are not contiguous
 
 #LayoutTrackDrawingOptionsDialog properties
+#
+# the presets
 ClassicPresetName = Classic JMRI
-DraftingPresetName = Drafting
-RealisticPresetName = Realistic
-GarishPresetName = Garish
 CustomPresetName = Custom
+DraftingPresetName = Drafting
+GarishPresetName = Garish
+RealisticPresetName = Realistic
+
+#the top labels text and tooltips
+MainLineToolTip = This column is for mainline options
+MainlineLabelText = Mainline
+OptionLabelText = Options
+OptionToolTip = This column contains the available options
+SideLineToolTip = This column is for sideline options
+SidelineLabelText = Sideline
+
+#the option labels text and tooltips
+BallastColorLabelText = Ballast Color
+BallastColorToolTip = Click one of the buttons to the right to set the color of the ballast
+BallastWidthLabelText = Ballast Width
+BallastWidthToolTip = Click one of the buttons to the right to set the width of the ballast
+BlockLineWidthLabelText = Block Line Width
+BlockLineWidthToolTip = Click one of the buttons to the right to set the width of the block line
+RailColorLabelText = Rail Color
+RailColorToolTip = Click one of the buttons to the right to set the color of the rails
+RailCountLabelText = Rail Count
+RailCountToolTip = Click one of the buttons to the right to set the number of rails
+RailGapLabelText = Rail Gap
+RailGapToolTip = Click one of the buttons to the right to set the distance between the rails
+RailWidthLabelText = Rail Width
+RailWidthToolTip = Click one of the buttons to the right to set the width of the rails
+TieColorLabelText = Tie Color
+TieColorToolTip = Click one of the buttons to the right to set the color of the ties
+TieGapLabelText = Tie Gap
+TieGapToolTip = Click one of the buttons to the right to set the distance between the ties
+TieLengthLabelText = Tie Length
+TieLengthToolTip = Click one of the buttons to the right to set the length of the ties
+TieWidthLabelText = Tie Width
+TieWidthToolTip = Click one of the buttons to the right to set the width of the ties
+
+#the mainline option tooltips
+MainBallastColorToolTip = Click this button to set the color of the mainline ballast
+MainBallastWidthToolTip = Click this button to set the width of mainline ballast
+MainBlockLineWidthToolTip = Click this button to set the width of mainline block lines
+MainRailColorToolTip = Click this button to set the color of mainline rails
+MainRailCountToolTip = Click this button to set the number of mainline rails
+MainRailGapToolTip = Click this button to set the distance between mainline rails
+MainRailWidthToolTip = Click this button to set the width of mainline rails
+MainTieColorToolTip = Click this button to set the color of mainline ties
+MainTieGapToolTip = Click this button to set the distance between ties
+MainTieLengthToolTip = Click this button to set the length of mainline ties
+MainTieWidthToolTip = Click this button to set the width of mainline ties
+
+#the sideline option tooltips
+SideBallastColorToolTip = Click this button to set the color of sideline ballast
+SideBallastWidthToolTip = Click this button to set the width of sideline ballast
+SideBlockLineWidthToolTip = Click this button to set the width of sideline block lines
+SideRailColorToolTip = Click this button to set the color of sideline rails
+SideRailCountToolTip = Click this button to set the number of sideline rails
+SideRailGapToolTip = Click this button to set the distance between sideline rails
+SideRailWidthToolTip = Click this button to set the width of sideline rails
+SideTieColorToolTip = Click this button to set the color of sideline ties
+SideTieGapToolTip = Click this button to set the distance between sideline ties
+SideTieLengthToolTip = Click this button to set the length of sideline ties
+SideTieWidthToolTip = Click this button to set the width of sideline ties
