MainLine => Mainline; ToolTip => toolTipText; NPE null passed to @Nonnull fixed.

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -647,7 +647,7 @@ GarishPresetName = Garish
 RealisticPresetName = Realistic
 
 #the top labels text and tooltips
-MainLineToolTip = This column is for mainline options
+MainlineToolTip = This column is for mainline options
 MainlineLabelText = Mainline
 OptionLabelText = Options
 OptionToolTip = This column contains the available options
