Refinements to USB Browser
- All roots in tree have expansion handles if there are chldren.
- Additional information for USB device.
- Copying USB device information possible.
- Non-generic icons used for nodes.

--- a/build.xml
+++ b/build.xml
@@ -458,7 +458,7 @@
             <fileset dir="${resourcedir}" includes="*.gif"/>
         </copy>
         <copy todir="${target}">
-            <fileset dir="${source}" includes="**/*.properties,**/*.js"/>
+            <fileset dir="${source}" includes="**/*.properties,**/*.js,**/*.png"/>
             <fileset dir="${source}" includes="META-INF/**"/>
         </copy>
     </target>
