--- a/java/src/jmri/util/usb/Bundle.properties
+++ b/java/src/jmri/util/usb/Bundle.properties
@@ -21,3 +21,13 @@ UsbDeviceProductId=Product ID
 UsbDeviceLocationId=Location ID
 #Table text when there is no selection
 EmptySelection=No device selected
+#USB Class for device
+UsbDeviceClass=Class
+#USB SubClass for device
+UsbDeviceSubClass=SubClass
+#USB Protocol for device
+UsbDeviceProtocol=Protocol
+#USB BCD Release Number for device
+UsbDeviceReleaseNumber=Release Number
+#USB Number of Configurations for device
+UsbDeviceNumConfigurations=Configurations
