Renamed MainlineToolTip to MainlineColumnToolTip (property name collision)

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -647,11 +647,11 @@ GarishPresetName = Garish
 RealisticPresetName = Realistic
 
 #the top labels text and tooltips
-MainlineToolTip = This column is for mainline options
+MainlineColumnToolTip = This column is for mainline options
 MainlineLabelText = Mainline
 OptionLabelText = Options
 OptionToolTip = This column contains the available options
-SideLineToolTip = This column is for sideline options
+SidelineColumnToolTip = This column is for sideline options
 SidelineLabelText = Sideline
 
 #the option labels text and tooltips
