Improve table heading

--- a/java/src/jmri/jmrit/operations/rollingstock/cars/JmritOperationsCarsBundle.properties
+++ b/java/src/jmri/jmrit/operations/rollingstock/cars/JmritOperationsCarsBundle.properties
@@ -20,6 +20,7 @@ WeightTons          = Tons
 #LocationAndTrack    = Location and Track
 FD                  = FD
 ReturnWhenEmpty     = Return When Empty
+RWELocation			= RWE Location
 RWELoad             = RWE Load
 Wait                = Wait
 Last                = Last
