Show USB device location in browser
Also display IDs in same way both Linux (udevadm) and macOS do (lower case 4 digit hexidecimal) and class details as in specification (upper case 2 digit hexidecimal).

--- a/java/src/jmri/util/usb/Bundle.properties
+++ b/java/src/jmri/util/usb/Bundle.properties
@@ -18,7 +18,7 @@ UsbDeviceVendorId=Vendor ID
 #USB Product ID for device
 UsbDeviceProductId=Product ID
 #USB Location for device
-UsbDeviceLocationId=Location ID
+UsbDeviceLocation=Location
 #Table text when there is no selection
 EmptySelection=No device selected
 #USB Class for device
