--- a/java/test/apps/PanelPro/profiles/EasyDcc_Simulator/profile/profile.properties
+++ b/java/test/apps/PanelPro/profiles/EasyDcc_Simulator/profile/profile.properties
@@ -2,7 +2,7 @@
 #Wed Nov 08 18:49:34 CET 2017
 apps-gui.fontSize=0
 apps-gui.graphicTableState=true
-apps-gui.locale=nl
+apps-gui.locale=en-US
 apps-gui.lookAndFeel=com.apple.laf.AquaLookAndFeel
 apps-gui.nonstandardMouseEvent=false
 apps-gui.showToolTipDismissDelay=4000
