apply bg choice on visible (Image)Panel pick up/set Panel bg color, check for null override special classes use shared methods and fields for bg combo adjust preview image pixels size, set as integers not JPanel as not yet laid out and difficult to configure use more variables in debug lines

--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -159,7 +159,7 @@ ClearAll        = Clear all
 MultiSensor     = MultiSensor
 IndicatorTrack  = Indicator Track
 IndicatorTO     = Indicator Turnout
-setBackground   = Preview Background:
+setBackground   = View on:
 Checkers        = Checkers
 PanelBgColor    = Panel Color
 
