common method to build Palette background image array, remove unused imports Set Background... button name

--- a/java/src/jmri/jmrit/display/palette/PaletteBundle.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle.properties
@@ -41,7 +41,7 @@ HideIcons           = Hide Icons
 ButtonEditIcons     = Edit Icons
 ButtonShowCatalog   = Icon Catalog
 HideCatalog         = Hide Catalog
-ButtonBackgroundColor = Background Color
+ButtonBackgroundColor=Set Panel Background Color...
 updateButton        = Update Panel
 addNewFamily        = Add New Icon Set
 addIcon             = Add Icon
