Added "Realistic Oh!"

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -644,6 +644,7 @@ ClassicPresetName = Classic JMRI
 CustomPresetName = Custom
 DraftingPresetName = Drafting
 GarishPresetName = Garish
+RealisticOhPresetName = Realistic Oh!
 RealisticPresetName = Realistic
 
 #the top labels text and tooltips
