--- a/java/src/jmri/jmrit/display/DisplayBundle.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle.properties
@@ -273,6 +273,7 @@ NoSensorAt      = No Sensor is specified at position {0}.
 RPSreporter     = RPS Reporter
 RightTurnout    = Right Hand Turnout
 LeftTurnout     = Left Hand Turnout
+lever           = Lever
 # the next 2 keys are also picked up by Palette/ItemPalette.java for the InicatorTO icon family
 RightCrossover  = RH X-over
 LeftCrossover   = LH X-over
