--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -636,7 +636,8 @@ CheckUnBlockedTracksMenuTitle = Un-Blocked Tracks
 CheckUnBlockedTracksMenuToolTip = Select this to check for tracks that do not have an assigned block
 CheckNonContiguousBlocksMenuTitle = Non-Contiguous Blocks
 CheckNonContiguousBlocksMenuToolTip = Select this to check for blocks that are not contiguous
-
+CheckUnnecessaryAnchorsMenuTitle = Unnecessary Anchors
+CheckUnnecessaryAnchorsMenuToolTip = Select this to check if the adjacent track segments can be merged
 #LayoutTrackDrawingOptionsDialog properties
 #
 # the presets
