--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -58,6 +58,16 @@ MainlineBox = Mainline
 MainlineCheckBoxTip = Sets track segment type - check for mainline track, uncheck for side track.
 Solid = Solid
 Style = Style
+
+MainlineCheckBoxMenuItemTitle = Mainline
+MainlineCheckBoxMenuItemToolTip = Sets track segment type - check for mainline track, uncheck for side track.
+HiddenCheckBoxMenuItemTitle = Hidden
+HiddenCheckBoxMenuItemToolTip = Check this to hide the track when not in edit mode
+DashedCheckBoxMenuItemTitle = Dashed
+DashedCheckBoxMenuItemToolTip = Sets track segment style - checked for dashed, unchecked for solid.
+FlippedCheckBoxMenuItemTitle = Flipped
+FlippedCheckBoxMenuItemToolTip = Check this move the center of the arc/circle to the other side of the track
+
 LevelCrossingToolTip = Select to add a level crossing track when next clicking with shift down.
 SingleSlipToolTip = Select to add a single slip when next clicking with shift down.
 DoubleSlipToolTip = Select to add a double slip when next clicking with shift down.
@@ -591,8 +601,9 @@ TCTErrorUnableToCreate = Unable to create Transit {0}
 
 # Use with track segments
 ChangeTo = Change To
-#Circle, Ellipse & Bezier are in > DisplayBundle
-FlipAngle = Flip Angle
+#Circle, Ellipse & Bezier are in DisplayBundle.properties file
+FlipAngleCheckBoxMenuItemTitle = Flip Angle
+FlipAngleCheckBoxMenuItemToolTip = Flips the side of the track that the arc center is on
 ShowConstruct = Show Construction Line
 HideConstruct = Hide Construction Line
 AddBezierControlPointAfter = Add Control Point After
@@ -705,3 +716,79 @@ SideTieColorToolTip = Click this button to set the color of sideline ties
 SideTieGapToolTip = Click this button to set the distance between sideline ties
 SideTieLengthToolTip = Click this button to set the length of sideline ties
 SideTieWidthToolTip = Click this button to set the width of sideline ties
+
+#
+# decorations
+#
+DecorationMenuTitle = Decorations
+DecorationMenuToolTip = Use this menu to change decoration settings for this track
+# count
+DecorationCountMenuTitle = Count
+DecorationCountMenuToolTip = Select how many of these decorations to add to this track
+DecorationNoneMenuItemTitle = None
+DecorationNoneMenuItemToolTip = Select this to remove this decoration from this track
+DecorationSingleMenuItemTitle = Single
+DecorationSingleMenuItemToolTip = Select this to add one of these decorations to this track
+DecorationDoubleMenuItemTitle = Double
+DecorationDoubleMenuItemToolTip = Select this to add two of these decorations to this track
+DecorationTripleMenuItemTitle = Triple
+DecorationTripleMenuItemToolTip = Select this to add three of these decorations to this track
+DecorationCountMenuItemTitle = Count
+DecorationCountMenuItemToolTip = Select this to set the number of these decorations to add to this track
+# end
+DecorationEndMenuTitle = Which End
+DecorationEndMenuToolTip = Select at which end(s) to add this decoration
+DecorationStartMenuItemTitle = Start
+DecorationStartMenuItemToolTip = Select this to add this decoration at the beginning of this track
+DecorationEndMenuItemTitle = End
+DecorationEndMenuItemToolTip = Select this to add this decoration at the end of this track
+DecorationBothMenuItemTitle = Both
+DecorationBothMenuItemToolTip = Select this to add this decoration at both ends of this track
+# side
+DecorationSideMenuTitle = Which Side
+DecorationSideMenuToolTip = Select on which side(s) to add this decoration
+DecorationSideLeftMenuItemTitle = Left
+DecorationSideLeftMenuItemToolTip = Select this to add this decoration to the left side of this track
+DecorationSideRightMenuItemTitle = Right
+DecorationSideRightMenuItemToolTip = Select this to add this decoration to the right side of this track
+DecorationSideBothMenuItemTitle = Both
+DecorationSideBothMenuItemToolTip = Select this to add this decoration to both sides of this track
+
+DecorationColorMenuItemTitle = Color
+DecorationColorMenuItemToolTip = Select this to change the color of this decoration
+DecorationWidthMenuItemTitle = Line Width
+DecorationWidthMenuItemToolTip = Select this to change the line width of this decoration
+DecorationLengthMenuItemTitle = Length
+DecorationLengthMenuItemToolTip = Select this to change the length of this decoration
+DecorationGapMenuItemTitle = Space
+DecorationGapMenuItemToolTip = Select this to change the space between multiple decorations
+DecorationFlipMenuItemTitle = Flip
+DecorationFlipMenuItemToolTip = Select this to flip the direction of the decorations for this track
+
+# Arrows
+ArrowsMenuTitle = Arrows
+ArrowsMenuToolTip = Use this menu to change arrow decoration settings for this track
+ArrowsDirectionMenuTitle = Which Direction
+ArrowsDirectionMenuToolTip = Select the direction to point the arrows
+ArrowsDirectionInMenuItemTitle = In
+ArrowsDirectionInMenuItemToolTip = Select this to draw arrows pointing in
+ArrowsDirectionOutMenuItemTitle = Out
+ArrowsDirectionOutMenuItemToolTip = Select this to draw arrows pointing out
+ArrowsDirectionBothMenuItemTitle = Both
+ArrowsDirectionBothMenuItemToolTip = Select this to draw arrow(s) pointing in and out
+
+# Bridge
+BridgeMenuTitle = Bridge
+BridgeMenuToolTip = Use this menu to change bridge decoration settings for this track
+BridgeApproachLengthMenuItemTitle = Approach Length
+BridgeApproachLengthMenuItemToolTip = Select this to change the length of the approaches on the bridge decoration for this track
+BridgeDeckWidthMenuItemTitle = Deck Width
+BridgeDeckWidthMenuItemToolTip = Select this to change the distance between the sides of the bridge decorations for this track
+
+# End Bumper
+EndBumperMenuTitle = End Bumpers
+EndBumperMenuToolTip = Use this menu to change the end bumper decoration settings for this track
+
+# Tunnel
+TunnelMenuTitle = Tunnel
+TunnelMenuToolTip = Use this menu to change the tunnel decoration settings for this track
