Refactor entry/exit properties

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -736,16 +736,20 @@ DecorationTripleMenuItemToolTip = Select this to add three of these decorations 
 DecorationCountMenuItemTitle = Count
 DecorationCountMenuItemToolTip = Select this to set the number of these decorations to add to this track
 # end
-DecorationEndMenuTitle = Which End
+DecorationEndMenuTitle = End
 DecorationEndMenuToolTip = Select at which end(s) to add this decoration
 DecorationStartMenuItemTitle = Start
 DecorationStartMenuItemToolTip = Select this to add this decoration at the beginning of this track
 DecorationEndMenuItemTitle = End
 DecorationEndMenuItemToolTip = Select this to add this decoration at the end of this track
+DecorationEntryMenuItemTitle = Entry
+DecorationEntryMenuItemToolTip = Select this to add this decoration at the entry of this track
+DecorationExitMenuItemTitle = Exit
+DecorationExitMenuItemToolTip = Select this to add this decoration at the exit of this track
 DecorationBothMenuItemTitle = Both
 DecorationBothMenuItemToolTip = Select this to add this decoration at both ends of this track
 # side
-DecorationSideMenuTitle = Which Side
+DecorationSideMenuTitle = Side
 DecorationSideMenuToolTip = Select on which side(s) to add this decoration
 DecorationSideLeftMenuItemTitle = Left
 DecorationSideLeftMenuItemToolTip = Select this to add this decoration to the left side of this track
@@ -768,7 +772,7 @@ DecorationFlipMenuItemToolTip = Select this to flip the direction of the decorat
 # Arrows
 ArrowsMenuTitle = Arrows
 ArrowsMenuToolTip = Use this menu to change arrow decoration settings for this track
-ArrowsDirectionMenuTitle = Which Direction
+ArrowsDirectionMenuTitle = Direction
 ArrowsDirectionMenuToolTip = Select the direction to point the arrows
 ArrowsDirectionInMenuItemTitle = In
 ArrowsDirectionInMenuItemToolTip = Select this to draw arrows pointing in
