Javadoc, fix button spelling move, update MultiSensor help screen shot

--- a/java/src/jmri/jmrit/display/DisplayBundle.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle.properties
@@ -77,7 +77,7 @@ ButtonSetName       = Set Panel name
 ButtonAddText       = Add text:
 ButtonAddIcon       = Add to Panel
 ButtonUpdateIcon    = Update Panel
-ButtonChangeIcon    = Change icon...
+ButtonChangeIcon    = Change Icon...
 ButtonCloseCatalog  = Close Catalog
 
 CPEView         = Change view to Control Panel Editor
