Still need to prefect save/load xml schema
Spelling persistance => persistence
Refactor hideConstructionLines => setShowConstructionLines
Added QuickPromptUtil functions
Added ColorUtil.contrast

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -635,7 +635,7 @@ Line=Line
 #check menu items
 CheckMenuTitle = Check
 ReCheckMenuTitle = Re-Check
-CheckMenuToolTip = Use this menu to run layout editor checks
+CheckMenuToolTip = Select this menu to run layout editor checks
 CheckInProgressMenuItemTitle = Check In Progress...
 CheckInProgressMenuItemToolTip = Checking is in progress... (please wait)
 CheckNoResultsMenuItemTitle = No Results
@@ -721,7 +721,7 @@ SideTieWidthToolTip = Click this button to set the width of sideline ties
 # decorations
 #
 DecorationMenuTitle = Decorations
-DecorationMenuToolTip = Use this menu to change decoration settings for this track
+DecorationMenuToolTip = Select this menu to change decoration settings for this track
 # count
 DecorationCountMenuTitle = Count
 DecorationCountMenuToolTip = Select how many of these decorations to add to this track
@@ -760,8 +760,8 @@ DecorationSideBothMenuItemToolTip = Select this to add this decoration to both s
 
 DecorationColorMenuItemTitle = Color
 DecorationColorMenuItemToolTip = Select this to change the color of this decoration
-DecorationWidthMenuItemTitle = Line Width
-DecorationWidthMenuItemToolTip = Select this to change the line width of this decoration
+DecorationLineWidthMenuItemTitle = Line Width
+DecorationLineWidthMenuItemToolTip = Select this to change the line width of this decoration
 DecorationLengthMenuItemTitle = Length
 DecorationLengthMenuItemToolTip = Select this to change the length of this decoration
 DecorationGapMenuItemTitle = Space
@@ -771,7 +771,7 @@ DecorationFlipMenuItemToolTip = Select this to flip the direction of the decorat
 
 # Arrows
 ArrowsMenuTitle = Arrows
-ArrowsMenuToolTip = Use this menu to change arrow decoration settings for this track
+ArrowsMenuToolTip = Select this menu to change arrow decoration settings for this track
 ArrowsDirectionMenuTitle = Direction
 ArrowsDirectionMenuToolTip = Select the direction to point the arrows
 ArrowsDirectionInMenuItemTitle = In
@@ -783,16 +783,20 @@ ArrowsDirectionBothMenuItemToolTip = Select this to draw arrow(s) pointing in an
 
 # Bridge
 BridgeMenuTitle = Bridge
-BridgeMenuToolTip = Use this menu to change bridge decoration settings for this track
-BridgeApproachLengthMenuItemTitle = Approach Length
-BridgeApproachLengthMenuItemToolTip = Select this to change the length of the approaches on the bridge decoration for this track
+BridgeMenuToolTip = Select this menu to change bridge decoration settings for this track
+BridgeApproachWidthMenuItemTitle = Approach Width
+BridgeApproachWidthMenuItemToolTip = Select this to change the width of the approaches on the bridge decoration for this track
 BridgeDeckWidthMenuItemTitle = Deck Width
 BridgeDeckWidthMenuItemToolTip = Select this to change the distance between the sides of the bridge decorations for this track
 
 # End Bumper
 EndBumperMenuTitle = End Bumpers
-EndBumperMenuToolTip = Use this menu to change the end bumper decoration settings for this track
+EndBumperMenuToolTip = Select this menu to change the end bumper decoration settings for this track
 
 # Tunnel
 TunnelMenuTitle = Tunnel
-TunnelMenuToolTip = Use this menu to change the tunnel decoration settings for this track
+TunnelMenuToolTip = Select this menu to change the tunnel decoration settings for this track
+TunnelFloorWidthMenuItemTitle = Floor Width
+TunnelFloorWidthMenuItemToolTip = Select this menu to change the tunnel floor width
+TunnelEntranceWidthMenuItemTitle = Entrance Width
+TunnelEntranceWidthMenuItemToolTip = Select this menu to change the tunnel entrance width
