use webdrivermanager to manage selenium webdriver instances

--- a/pom.xml
+++ b/pom.xml
@@ -721,6 +721,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+	        <groupId>io.github.bonigarcia</groupId>
+	        <artifactId>webdrivermanager</artifactId>
+	        <version>2.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.help</groupId>
             <artifactId>javahelp</artifactId>
             <version>2.0.05</version>
