--- a/.classpath
+++ b/.classpath
@@ -135,5 +135,6 @@
 	<classpathentry kind="lib" path="lib/picocontainer-2.15.jar"/>
 	<classpathentry kind="lib" path="lib/tag-expressions-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/typetools-0.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/webdrivermanager-2.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
