Added Arrow Styles / Icons

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -722,19 +722,12 @@ SideTieWidthToolTip = Click this button to set the width of sideline ties
 #
 DecorationMenuTitle = Decorations
 DecorationMenuToolTip = Select this menu to change decoration settings for this track
-# count
-DecorationCountMenuTitle = Count
-DecorationCountMenuToolTip = Select how many of these decorations to add to this track
+# style
+DecorationStyleMenuTitle = Style
+DecorationStyleMenuToolTip = Select the style of arrow decorations to add to this track
 DecorationNoneMenuItemTitle = None
 DecorationNoneMenuItemToolTip = Select this to remove this decoration from this track
-DecorationSingleMenuItemTitle = Single
-DecorationSingleMenuItemToolTip = Select this to add one of these decorations to this track
-DecorationDoubleMenuItemTitle = Double
-DecorationDoubleMenuItemToolTip = Select this to add two of these decorations to this track
-DecorationTripleMenuItemTitle = Triple
-DecorationTripleMenuItemToolTip = Select this to add three of these decorations to this track
-DecorationCountMenuItemTitle = Count
-DecorationCountMenuItemToolTip = Select this to set the number of these decorations to add to this track
+
 # end
 DecorationEndMenuTitle = End
 DecorationEndMenuToolTip = Select at which end(s) to add this decoration
