Don't use separate instances for tasks
Since we are not running tasks in parallel, we don't need to use antcall to spin off separate instances of ant for each task, so just make the appveyor target depend on other targets so a single ant process handles everything.

--- a/build.xml
+++ b/build.xml
@@ -2327,15 +2327,7 @@
         <echo message="new release branch ${branch-name} created"/>
     </target>
 
-    <target name="appveyor" description="Execute CI tasks on Appveyor">
-        <!-- <parallel threadCount="1"> < ! - - allow up to four tasks at once -->
-        <sequential>
-            <antcall target="warnings" />
-            <antcall target="tests-warnings" />
-            <antcall target="checkPropertiesFiles" />
-            <antcall target="ci-test-appveyor-coveragecheck" />
-            <!-- </parallel> -->
-        </sequential>
+    <target name="appveyor" description="Execute CI tasks on Appveyor" depends="warnings, tests-warnings, checkPropertiesFiles, ci-test-appveyor-coveragecheck">
     </target>
 
 	<!-- - - - - - - - - - - - - - - - - -
