Add a message after completing ECJ builds.

--- a/build.xml
+++ b/build.xml
@@ -707,6 +707,7 @@
                 <compilerarg value="@${basedir}/java/ecj.warning.options"/>
                 <classpath refid="@{javac.classpath}"/>
             </javac>
+            <echo message="Done building @{javac.target} with ecj."/>
         </sequential>
     </macrodef>
 
