--- a/build.xml
+++ b/build.xml
@@ -1353,7 +1353,7 @@
             <sysproperty key="log4j.ignoreTCL" path="true/"/>
             <sysproperty key="java.library.path" path=".:${libdir}:${arch.lib.path}"/>
             <sysproperty key="jmri.prefsdir" path="${tempdir}"/>
-            <sysproperty key="cucumber.options" value="--tags ~@Ignore"/>
+            <sysproperty key="cucumber.options" value="--tags 'not @Ignore'"/>
 
             <classpath refid="test.class.path"/>
 
