Remove ECoS Locomotives from Bean Tables
Since an ECoS locomotive address is not a named bean, do not show the ECoS locomotive address in the NamedBean tables, but in its own window.

--- a/java/src/jmri/jmrix/ecos/EcosBundle.properties
+++ b/java/src/jmri/jmrix/ecos/EcosBundle.properties
@@ -54,8 +54,7 @@ DecoderSelectionXTitle      = Selection for Loco {0}
 AddRosterEntryQuestion      = Add Roster Entry From JMRI?
 
 # swing items
-EcosLocoTableTitle          = ECoS Loco Table
-XLocoTableTitle             = {0} Loco Table
+EcosLocoTableTitle          = {0} Loco Table
 EcosLocoTitle               = ECoS Loco
 UpdateToolTip               = Request status update from ECoS
 RosterPrefLabel             = Resolve conflicts between JMRI and the ECoS:
