Implement Enhanced EntryExit
Enable full cross panel entry/exit support.
Add new entry/exit actions to Logix.

--- a/java/src/jmri/jmrit/entryexit/EntryExitBundle.properties
+++ b/java/src/jmri/jmrit/entryexit/EntryExitBundle.properties
@@ -61,3 +61,5 @@ PromptUser = Prompt User
 ClearRoute = Clear Route
 CancelRoute = Cancel Route
 StackRoute = Stack Route
+
+RouteDisabled = NX Pair, "{0}", is disabled.\nUnable to allocate route.
