Verify no Conditional references before NX Pair delete

--- a/java/src/jmri/jmrit/entryexit/EntryExitBundle.properties
+++ b/java/src/jmri/jmrit/entryexit/EntryExitBundle.properties
@@ -13,6 +13,7 @@ BeanNameDestination = NX Destination Point
 StackRouteAsk = Would you like to Stack the Route?
 RouteNotClear = Route Not Clear
 Error1 = No item was selected in the list.\nPlease do so and click {0} or leave Route Stacked.
+DeleteWarningTitle = Delete Denied
 
 Stack = Stack
 ClearDown = Clear Down
