translations for display + new le menus move cardinal directions form ops to nbb to share

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -191,7 +191,7 @@ HideCrossing = Hide Crossing
 HideSlip = Hide Slip
 HiddenToolTip = Check to hide this track segment when not in edit mode.
 AssignBlockToSelectionTitle = Assign Block To Selection
-AssignBlockToSelectionToolTip = Select this to assign the block from the toolbar to all selected layout tracks
+AssignBlockToSelectionToolTip=Select this to assign the block from the toolbar to all selected layout tracks.
 ScaleTrackDiagram = Scale/Translate Track Diagram
 ScaleTrackDiagramToolTip = Select this to scale and/or translate all layout track
 XFactorLabel = Horizontal (x) Scale Factor:
@@ -294,6 +294,7 @@ TabIcon = Icons
 
 FontSize = Font Size
 
+# the following keys are called indirectly in code, so simple check might flag them as unused
 DropDownListsDisplayOrder = Drop Down Lists Display Order...
 DropDownListsDisplayOrderDisplayName = Display Name (User else System)
 DropDownListsDisplayOrderUserNameSystemName = User Name followed by System Name
@@ -329,16 +330,14 @@ TooltipAlways = Always
 TooltipEdit = In Edit Mode only
 TooltipNotEdit = Not in Edit Mode only
 TurnoutCirclesOn = Show Turnout Circles
-#ShowBlockNames = Show Block Names in Edit Mode
 AntialiasingOn = Enable antialiasing (Smoother lines)
 NewTitle = New Title
 EditTitle = Edit Title
-#SetBackgroundColor = Set Background Color
 
 SetGridSizes = Set Grid Sizes
-PrimaryGridSize = Primary Grid Size
+PrimaryGridSize = Primary Grid Size:
 PrimaryGridSizeHint = Enter width for primary grid size
-SecondaryGridSize = Secondary Grid Size
+SecondaryGridSize = Secondary Grid Size:
 SecondaryGridSizeHint = Enter width for secondary grid size
 
 SetGridSizesMessageTitle = Grid Sizes
@@ -351,7 +350,6 @@ TrackColorSubMenu = Default Track Colors
 DefaultTrackColor = Set Default Track Color
 DefaultOccupiedTrackColor = Set Default Occupied Track Color
 DefaultAlternativeTrackColor = Set Default Alternative Track Color
-#DefaultTextColor = Set Default Text Color
 TurnoutOptions = Turnout Options
 TurnoutCircleColor = Set Turnout Circle Color
 TurnoutCircleSize = Set Turnout Circle Size
@@ -364,21 +362,21 @@ ResetTurnoutSizeToolTip = Click here to reset to the default turnout size
 SkipInternalTurnout = Skip Unsignaled Internal Turnouts
 SkipInternalTurnoutToolTip = Click here to toggle skipping unsignaled internal turnouts
 SignalsAtTurnout = Set Signal Heads at Turnout
-SignalsAtTurnoutToolTip = Click here to setup the signal heads at a turnout
+SignalsAtTurnoutToolTip = Click here to set up the signal heads at a turnout
 SignalsAtBoundary = Set Signal Heads at Block Boundary
-SignalsAtBoundaryToolTip = Click here to setup the signal heads at a block boundary
+SignalsAtBoundaryToolTip = Click here to set up the signal heads at a block boundary
 SignalsAtXoverTurnout = Set Signal Heads at Crossover
-SignalsAtXoverTurnoutToolTip = Click here to setup the signal heads at a crossover
+SignalsAtXoverTurnoutToolTip=Click here to set up the signal heads at a crossover
 SignalsAtLevelXing = Set Signal Heads at Level Crossing
-SignalsAtLevelXingToolTip = Click here to setup the signal heads at a level crossing
+SignalsAtLevelXingToolTip = Click here to set up the signal heads at a level crossing
 SignalsAtTToTTurnout = Set Signal Heads at Throat-to-Throat Turnouts
-SignalsAtTToTTurnoutToolTip = Click here to setup the signals on throat-to-throat turnouts
+SignalsAtTToTTurnoutToolTip = Click here to set up the signals on throat-to-throat turnouts
 SignalsAtSlip = Set Signal Heads at a Slip
-SignalsAtSlipToolTip = Click here to setup the signal heads at a single or double slip
+SignalsAtSlipToolTip=Click here to set up the signal heads at a single or double slip
 SignalsAt3WayTurnout = Set Signal Heads at 3-Way Turnout
-SignalsAt3WayTurnoutToolTip = Click here to setup the signal heads at a 3-way turnout
+SignalsAt3WayTurnoutToolTip = Click here to set up the signal heads at a 3-way turnout
 EntryExitTitle = Entry Exit
-EntryExitToolTip = Click here to setup entry exit
+EntryExitToolTip=Click here to set up Entry-Exit
 SensorsAtBoundary = Set Sensors at Block Boundary
 SensorsAtTurnout = Set Sensors at Turnout
 SensorsAtLevelXing = Set Sensors at Level Crossing
@@ -407,10 +405,6 @@ OrBoth = (or both Turnout
 Throat = Throat
 ThroatToThroat = Throat to Throat
 ThreeWay = Three Way
-East = East
-West = West
-#Route = Route
-Signal = Signal
 Tracks) = tracks)
 EnterXOverTurnout = Enter name of crossover turnout
 XContinuing = {0} Corner - Continuing
@@ -617,7 +611,7 @@ VetoFoundInBlocks = Found in the following Layout Blocks
 VetoWillBeRemovedFromBlock = It will be removed from the layout block
 
 BeanNameLayoutBlock = Layout Block
-Line=Line
+Line = Line
 
 #check menu items
 CheckMenuTitle = Check
