--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -52,7 +52,7 @@ SplitTrackSegment = Split Track Segment
 MergeAdjacentTracks = Merge Adjacent Tracks
 CanNotMergeAtBlockBoundary = Cannot Merge at Block Boundary
 Dashed = Dashed
-DashedCheckBoxTip = Sets track segment style - checked for dashed, unchecked for solid.
+DashedCheckBoxTip = Sets track segment style - check for dashed, uncheck for solid.
 MainlineBox = Mainline
 MainlineCheckBoxTip = Sets track segment type - check for mainline track, uncheck for side track.
 Solid = Solid
@@ -469,7 +469,7 @@ Error5 = Error - You are currently editing this "{0}".\nOnly one editor may be o
 Error6 = Error - Sensor "{0}" is already assigned as the occupancy sensor \n of Block "{1}". Please check which is correct before continuing.
 Error7 = Error - Cannot assign occupancy sensor because there\nis no sensor defined for "{0}".\nPlease enter sensor via the Sensor Table and try again.
 Error8 = Error - Cannot assign turnout because there\nis no turnout defined for "{0}".\nPlease enter turnout via the Turnout Table and try again.
-Error9 = Error - Cannot create a signal head icon because there is no signal head\ndefined for - "{0}". Please enter the name of a Signal Head in\nthe Signal Table and try again.
+Error9 = Error - Cannot create a signal head icon because there is no signal head\ndefined for "{0}". Please enter the name of a Signal Head in\nthe Signal Table and try again.
 Error10 = Error - Cannot create a sensor icon because no name is entered in the\nSensor Icon field. Please enter the name of a sensor and try again.
 
 Error11 = Error - Cannot create a text label because no text is entered in the\nLabel text field. Please enter some text and try again.
@@ -479,11 +479,11 @@ Error11b = Error - Cannot create a Block Contents label because no block name is
 Error12 = Error - Cannot translate selection because no selection has been made.\nPlease select by dragging with the mouse and try again.
 Error13 = Error - Cannot delete a ray track because none are within 30 degrees of the\nentered angle. Please try again with a more precise angle entry.
 Error14 = Error - Required throat-to-throat arrangement not found. Please set up as two turnouts connected throat-to-throat by a single track segment.
-Error15 = Error - Cannot proceed because there is no turnout is assigned to one or more of the turnout diagrams. Please assign turnout(s) and try again.
+Error15 = Error - Cannot proceed because no turnout is assigned to one or more of the turnout diagrams. Please assign turnout(s) and try again.
 Error16 = Error - Cannot attach Memory to Block because no memory is defined for "{0}. Please enter a Memory defined in the Memory Table and try again.
 Error17 = Error - Reporter manager not available. Cannot add Reporter Icon.
-Error18 = Error - Could not provide Reporter {0}. Cannot add Reporter Icon.
-Error19 = Error - Missing Name for Sensor {0}. Please fill in all fields.
+Error18 = Error - Could not provide Reporter "{0}". Cannot add Reporter Icon.
+Error19 = Error - Missing Name for Sensor "{0}". Please fill in all fields.
 
 # question messages
 Question1 = Are you sure you want to remove this turnout from the panel, along with any connected Track Segments?
@@ -528,7 +528,7 @@ SensorsError13 = Error - Cannot assign sensor "{0}" to this block boundary\nbeca
 
 SignalMastsBlockNameHint = Enter name of one block where signal masts are needed at block boundary.
 
-SignalMastsTurnoutNameHint =  Enter name (system or user) of signal mast
+SignalMastsTurnoutNameHint = Enter name (system or user) of signal mast
 
 SignalMastsError4 = Error - SignalMast "{0}" does not exist. Please correct name\nor enter this SignalMast in the SignalMast Table, and try again.
 SignalMastsError5 = Error - SignalMast name was not entered. Please enter\na signal mast name for required positions or cancel.
@@ -572,10 +572,10 @@ Neighbouring = Neighboring Blocks
 ValidPaths = Valid Paths Through this Block
 Accessible = Accessible Blocks
 
-DuplicateSensorAssign = Sensor "{0}" has already been assigned on the panel\n Are you sure you want to assign it again?
+DuplicateSensorAssign = Sensor "{0}" has already been assigned on the panel.\n Are you sure you want to assign it again?
 DuplicateSensorAssignTitle = Sensor already Assigned
 
-TCTErrorMastPairsNotValid = Signal Mast "{0}" is not reachable from "{1}"\n Mast will not be added
+TCTErrorMastPairsNotValid = Signal Mast "{0}" is not reachable from "{1}".\n Mast will not be added.
 TCTErrorMastPairsNoSection = SignalMast Pair "{0}" to "{1}"\ndoes not have a Section associated with it.\nTransit creation aborted.
 TCTErrorUnableToCreate = Unable to create Transit {0}
 
