group imports Javadoc

--- a/java/src/jmri/jmrix/loconet/bdl16/BDL16x.properties
+++ b/java/src/jmri/jmrix/loconet/bdl16/BDL16x.properties
@@ -38,7 +38,7 @@ ButtonTextReadFullSheet = Read Full Sheet
 ToolTipButtonTextReadFullSheet = Read all OpSws from selected device
 ButtonTextWriteFullSheet = Write Full Sheet
 ToolTipButtonTextWriteFullSheet = Write all OpSws to the selected device
-LabelBoardID = Board ID
+LabelBoardID = Board ID:
 
 TitledBorderLabelBdl168Only = Options for BDL168 Only
 TitledBorderLabelAllBoards = Options for BDL16, BDL162, and BDL168
@@ -61,4 +61,3 @@ COMBOBOX_TEXT_OPSW36_CLOSED = Only interrogate messages trigger interrogation re
 COMBOBOX_TEXT_OPSW39_CLOSED = Enable verbose transponder tracking (BDL168 only)
 COMBOBOX_TEXT_OPSW42_CLOSED = Enable reply to initial power-on interogate (BDL168 only)
 COMBOBOX_TEXT_OPSW40_CLOSED = Restore factory default, including address
-
